deploy/kubernetes/mysql-standalone.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrestlingdev-mysql
  labels:
    app: wrestlingdev
spec:
  ports:
    - port: 3306
  selector:
    app: wrestlingdev
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wrestlingdev-mysql
  labels:
    app: wrestlingdev
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wrestlingdev
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: wrestlingdev-mysql-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            memory: "256Mi"
            cpu: "0.2"
      volumes:
      - name: wrestlingdev-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: wrestlingdev-mysql-pv-claim
