deploy/kubernetes/ingress-definitions.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wrestlingdev-app-ingress
spec:
  rules:
  - host: kube.wrestlingdev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wrestlingdev-app
          servicePort: 80
  tls:
    - hosts:
      - kube.wrestlingdev.com
